# ccxdebug

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: index.md  usage.md
src/ccx_material_editor/: material_processor.py
src/ccxdebug/: cli.py  quality_analyzer.py  vtu_converter.py
